# platform/supervisor — OTP-style process supervisor. Built today by
# CMake (see CMakeLists.txt). This BUILD.bazel exposes the generated
# proto sources so other Bazel targets — notably supervisor-gui's
# rules_foreign_cc wrapper — can sandbox them.
#
# A future native-Bazel cc_binary that fully replaces the CMake build
# would land alongside, but isn't required for the current Bazel
# integration goal (driving CMake from Bazel + producing per-machine
# .ipk / .deb).

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# Pre-generated .proto sources (artheia gen-proto output committed
# under generated/proto/). Consumed by supervisor-gui's CMake build
# via ${CMAKE_CURRENT_SOURCE_DIR}/../platform/supervisor/generated/proto.
filegroup(
    name = "proto_srcs",
    srcs = glob(
        ["generated/proto/**/*.proto"],
        allow_empty = False,
    ),
)

# ---------------------------------------------------------------------------
# C++ libprotobuf binding of the supervisor protos — Bazel owns the protoc
# codegen (#proto-as-dep). One protoc invocation over every .proto in
# generated/proto/ (a shared -I so the inter-imports — ControlRequest →
# ChildSpec, TreeSnapshot → ChildState, etc. — resolve). The .pb.cc/.pb.h
# are derived, gitignored (tree-wide *.pb.* rule). services/com's cmake()
# wrapper takes :supervisor_pb_cpp as a dep instead of re-running protoc in
# its own foreach loop. Grpc stubs (supervisor_bridge) still come from
# com's CMake — there's no Bazel grpc in theia's bzlmod graph.
#
# proto names listed explicitly (not glob) so the genrule's `outs` are
# known statically — must stay in sync with generated/proto/*.proto.
_SUP_PROTOS = [
    "ChildSelector", "ChildSpec", "ChildState", "ConfigureLogLevelRequest",
    "ConfigureTraceRequest", "ControlReply", "ControlRequest",
    "DeleteChildRequest", "GetChildRequest", "GetSystemInfoRequest",
    "GetTraceConfigRequest", "GetTreeRequest", "HealthBeacon",
    "HeartbeatReport", "LogLevelConfig", "SendTimeoutReport", "SocketInfo",
    "StartChildRequest", "SupervisionEvent", "SystemInfo", "ThreadSample",
    "TraceConfig", "TraceConfigList", "TreeSnapshot",
]

genrule(
    name = "supervisor_pb_cpp_gen",
    srcs = ["generated/proto/{}.proto".format(p) for p in _SUP_PROTOS],
    outs = (["cpp/{}.pb.cc".format(p) for p in _SUP_PROTOS] +
            ["cpp/{}.pb.h".format(p) for p in _SUP_PROTOS]),
    cmd = ("set -e;" +
           " in_dir=$$(dirname $(location generated/proto/ChildState.proto));" +
           " out_dir=$$(dirname $(location cpp/ChildState.pb.cc));" +
           " protoc -I $$in_dir --cpp_out=$$out_dir " +
           " ".join(["$$in_dir/{}.proto".format(p) for p in _SUP_PROTOS]) +
           ";"),
    local = True,  # host-installed protoc, same policy as the nanopb genrules
)

cc_library(
    name = "supervisor_pb_cpp",
    srcs = ["cpp/{}.pb.cc".format(p) for p in _SUP_PROTOS],
    hdrs = ["cpp/{}.pb.h".format(p) for p in _SUP_PROTOS],
    # `cpp/` is the include root so callers write `#include "ChildState.pb.h"`
    # (matches what protoc wrote + what com's sources already #include).
    includes = ["cpp"],
    deps = ["//third_party:system_protobuf"],
)

# ---------------------------------------------------------------------------
# NANOPB binding of the supervisor protos — the WIRE binding for the standard
# Theia transport (GwMessageHeader over TIPC) between com and the supervisor.
# The supervisor's control surface is a gen_server node on TipcMux; com drives
# it via RemoteRef. Both ends encode/decode these nanopb structs — NOT
# libprotobuf (that stays on the gRPC/GUI edge: supervisor_pb_cpp above).
#
# supervisor.options pins max_size/max_count on every string/repeated field
# so the structs are FIXED in-struct arrays (no pb_callback_t, no heap) — see
# system/supervisor.options. Keep it in sync with the .art message shapes.
genrule(
    name = "supervisor_nanopb_gen",
    srcs = ["generated/proto/{}.proto".format(p) for p in _SUP_PROTOS] +
           ["system/supervisor.options"],
    outs = (["nanopb/{}.pb.c".format(p) for p in _SUP_PROTOS] +
            ["nanopb/{}.pb.h".format(p) for p in _SUP_PROTOS]),
    cmd = ("set -e;" +
           " in_dir=$$(dirname $(location generated/proto/ChildState.proto));" +
           " out_dir=$$(dirname $(location nanopb/ChildState.pb.c));" +
           " opts=$(location system/supervisor.options);" +
           " nanopb_generator -I $$in_dir -f $$opts -D $$out_dir" +
           " --no-error-on-unmatched" +
           " ".join([""] + ["$$in_dir/{}.proto".format(p) for p in _SUP_PROTOS]) +
           ";"),
    local = True,  # host-installed nanopb_generator, same as the FC protos
)

# Control + report messages only — the request/reply + heartbeat link com
# and the supervisor speak over the standard transport. ALL 24 .pb.h are
# generated by the genrule above (cross-imports need the full set present),
# but we only COMPILE the control-path .pb.c into this lib. The firehose
# messages (TreeSnapshot/ChildState/SupervisionEvent/SystemInfo/...) stay
# OUT: as fixed nanopb structs they blow past nanopb's default 16-bit field
# descriptors (TreeSnapshot x 64 ChildState w/ threads+sockets is >64 kB),
# and PB_FIELD_32BIT can't be flipped per-library — it changes pb_size_t /
# pb_msgdesc_t / PB_BYTES_ARRAY_T ABI, which would mismatch the shared host
# libprotobuf-nanopb.a (16-bit) and corrupt every decode. The firehose moves
# to this transport in the next stage with proper sizing (smaller bounds, or
# callback fields for the unbounded lists).
_SUP_NANOPB_CTRL = [
    "ControlRequest", "ControlReply",
    "StartChildRequest", "DeleteChildRequest", "ChildSelector",
    "GetChildRequest", "GetTreeRequest", "GetSystemInfoRequest",
    "ConfigureTraceRequest", "GetTraceConfigRequest", "TraceConfig",
    "TraceConfigList", "ConfigureLogLevelRequest", "LogLevelConfig",
    "ChildSpec", "HeartbeatReport", "SendTimeoutReport",
]

cc_library(
    name = "supervisor_nanopb",
    srcs = ["nanopb/{}.pb.c".format(p) for p in _SUP_NANOPB_CTRL],
    hdrs = ["nanopb/{}.pb.h".format(p) for p in _SUP_NANOPB_CTRL],
    # `nanopb/` is the include root: callers write `#include "ControlRequest.pb.h"`.
    includes = ["nanopb"],
    copts = ["-fPIC"],
    # No @nanopb dep: nanopb's pb.h is host-installed (#include <pb.h> resolves
    # against /usr) and the system nanopb runtime is linked by the final binary
    # via `-l:libprotobuf-nanopb.a` in its linkopts — the same convention as
    # //platform/proto:platform_protos and //platform/runtime.
)
