# platform/supervisor — OTP-style process supervisor.
#
# `bazel build //platform/supervisor:supervisor` drives the canonical
# CMakeLists.txt through rules_foreign_cc's cmake() (same hybrid as
# //supervisor-gui). CMakeLists stays the
# dev source of truth (`cmake -S . -B build` still works); Bazel produces
# the same binary into bazel-bin/ for the rig pipeline AND lets the
# supervisor consume Bazel cc_libraries — notably the platform/runtime
# standard transport + the nanopb supervisor binding — in its sandbox.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

# Pre-generated .proto sources (artheia gen-proto output committed
# under generated/proto/). Consumed by supervisor-gui's CMake build
# via ${CMAKE_CURRENT_SOURCE_DIR}/../platform/supervisor/generated/proto.
filegroup(
    name = "proto_srcs",
    srcs = glob(
        ["generated/proto/**/*.proto"],
        allow_empty = False,
    ),
)

# Everything CMakeLists needs in the cmake() sandbox. The generated
# protos (gitignored, but on disk via gen-proto) come in through
# proto_srcs — CMakeLists globs generated/proto/*.proto and runs protoc
# itself, so we pass SKIP_GEN_PROTO=ON (the venv artheia isn't in the
# sandbox) and let those .proto files already be present.
filegroup(
    name = "all_srcs",
    srcs = glob(
        [
            "CMakeLists.txt",
            "include/**",
            "src/**",
            "system/**",
            "tombstone/**",
            # CMakeLists declares test + crasher add_executable()s
            # unconditionally; their sources must be present for the
            # CMake CONFIGURE step even though targets=["supervisor"]
            # only BUILDs the supervisor binary.
            "test/**",
        ],
        allow_empty = False,
    ) + [":proto_srcs"],
)

# Bazel build of the supervisor binary via the canonical CMakeLists.
# Same rules_foreign_cc cmake() pattern as //supervisor-gui: etcd-cpp +
# nlohmann/json are vendored under third_party/ and mounted via data=;
# their prefixes are passed as cache_entries (the -D mirror). The future
# platform/runtime nanopb transport will be added here as a dep (it stages
# into $EXT_BUILD_DEPS for CMakeLists to link), exactly like com's hybrid.
cmake(
    name = "supervisor",
    lib_source = ":all_srcs",
    out_binaries = ["supervisor"],
    cache_entries = {
        "ETCD_CPP_PREFIX": "$$EXT_BUILD_ROOT$$/third_party/etcd-cpp-apiv3/install",
        "NLOHMANN_JSON_INCLUDE_DIR": "$$EXT_BUILD_ROOT$$/third_party/nlohmann_json",
        # gen-proto needs the venv artheia, which isn't in the sandbox;
        # the .proto files are already staged via proto_srcs, so skip it.
        "SKIP_GEN_PROTO": "ON",
        # Build/install only the supervisor binary; crasher + tombstone
        # (the crash-forensics demo/lib) are not in targets=, so their
        # install() rules would fail. Standalone CMake keeps them ON.
        "INSTALL_SUPERVISOR_EXTRAS": "OFF",
    },
    data = [
        "//third_party:etcd-cpp-apiv3-install",
        "//third_party:nlohmann_json_hdrs",
    ],
    # #417 — the standard-transport control surface. control_node.cpp +
    # ControlServer use the platform/runtime gen_server stack and the nanopb
    # supervisor control structs. rules_foreign_cc stages these built
    # cc_libraries into $EXT_BUILD_DEPS (headers under include/, archives
    # under lib/); CMakeLists picks them up there (the EXT_DEPS branch).
    # //platform/runtime carries its transitive libgw header dep, so
    # gw_proto.h / GenServer.hh resolve in the sandbox.
    deps = [
        "//platform/runtime:runtime",
        ":supervisor_nanopb",
    ],
    # CMake finds protoc + protobuf as host-apt packages (cmake() doesn't
    # sandbox /usr). Only the `supervisor` target — not tombstone demos /
    # tests — is built.
    targets = ["supervisor"],
)

# ---------------------------------------------------------------------------
# C++ libprotobuf binding of the supervisor protos — Bazel owns the protoc
# codegen (#proto-as-dep). One protoc invocation over every .proto in
# generated/proto/ (a shared -I so the inter-imports — ControlRequest →
# ChildSpec, TreeSnapshot → ChildState, etc. — resolve). The .pb.cc/.pb.h
# are derived, gitignored (tree-wide *.pb.* rule). services/com's cmake()
# wrapper takes :supervisor_pb_cpp as a dep instead of re-running protoc in
# its own foreach loop. Grpc stubs (supervisor_bridge) still come from
# com's CMake — there's no Bazel grpc in theia's bzlmod graph.
#
# proto names listed explicitly (not glob) so the genrule's `outs` are
# known statically — must stay in sync with generated/proto/*.proto.
_SUP_PROTOS = [
    "ChildSelector", "ChildSpec", "ChildState", "ConfigureLogLevelRequest",
    "ConfigureTraceRequest", "ControlReply", "ControlRequest",
    "DeleteChildRequest", "GetChildRequest", "GetSystemInfoRequest",
    "GetTraceConfigRequest", "GetTreeRequest", "HealthBeacon",
    "HeartbeatReport", "LogLevelConfig", "SendTimeoutReport", "SocketInfo",
    "StartChildRequest", "SupervisionEvent", "SystemInfo", "ThreadSample",
    "TraceConfig", "TraceConfigList", "TreeSnapshot",
    # #429 topo-pair firehose stream (NodeFlag enum stays a plain uint32 on
    # the wire — NodeState.flags — so its standalone .proto is not compiled).
    "NodeEdge", "NodeState", "SnapshotBegin", "SnapshotEnd",
]

genrule(
    name = "supervisor_pb_cpp_gen",
    srcs = ["generated/proto/{}.proto".format(p) for p in _SUP_PROTOS],
    outs = (["cpp/{}.pb.cc".format(p) for p in _SUP_PROTOS] +
            ["cpp/{}.pb.h".format(p) for p in _SUP_PROTOS]),
    cmd = ("set -e;" +
           " in_dir=$$(dirname $(location generated/proto/ChildState.proto));" +
           " out_dir=$$(dirname $(location cpp/ChildState.pb.cc));" +
           " protoc -I $$in_dir --cpp_out=$$out_dir " +
           " ".join(["$$in_dir/{}.proto".format(p) for p in _SUP_PROTOS]) +
           ";"),
    local = True,  # host-installed protoc, same policy as the nanopb genrules
)

cc_library(
    name = "supervisor_pb_cpp",
    srcs = ["cpp/{}.pb.cc".format(p) for p in _SUP_PROTOS],
    hdrs = ["cpp/{}.pb.h".format(p) for p in _SUP_PROTOS],
    # `cpp/` is the include root so callers write `#include "ChildState.pb.h"`
    # (matches what protoc wrote + what com's sources already #include).
    includes = ["cpp"],
    deps = ["//third_party:system_protobuf"],
)

# ---------------------------------------------------------------------------
# NANOPB binding of the supervisor protos — the WIRE binding for the standard
# Theia transport (GwMessageHeader over TIPC) between com and the supervisor.
# The supervisor's control surface is a gen_server node on TipcMux; com drives
# it via RemoteRef. Both ends encode/decode these nanopb structs — NOT
# libprotobuf (that stays on the gRPC/GUI edge: supervisor_pb_cpp above).
#
# supervisor.options pins max_size/max_count on every string/repeated field
# so the structs are FIXED in-struct arrays (no pb_callback_t, no heap) — see
# system/supervisor.options. Keep it in sync with the .art message shapes.
genrule(
    name = "supervisor_nanopb_gen",
    srcs = ["generated/proto/{}.proto".format(p) for p in _SUP_PROTOS] +
           ["system/supervisor.options"],
    outs = (["nanopb/{}.pb.c".format(p) for p in _SUP_PROTOS] +
            ["nanopb/{}.pb.h".format(p) for p in _SUP_PROTOS]),
    cmd = ("set -e;" +
           " in_dir=$$(dirname $(location generated/proto/ChildState.proto));" +
           " out_dir=$$(dirname $(location nanopb/ChildState.pb.c));" +
           " opts=$(location system/supervisor.options);" +
           " nanopb_generator -I $$in_dir -f $$opts -D $$out_dir" +
           " --no-error-on-unmatched" +
           " ".join([""] + ["$$in_dir/{}.proto".format(p) for p in _SUP_PROTOS]) +
           ";"),
    local = True,  # host-installed nanopb_generator, same as the FC protos
)

# Control + report messages only — the request/reply + heartbeat link com
# and the supervisor speak over the standard transport. ALL 24 .pb.h are
# generated by the genrule above (cross-imports need the full set present),
# but we only COMPILE the control-path .pb.c into this lib. The firehose
# messages (TreeSnapshot/ChildState/SupervisionEvent/SystemInfo/...) stay
# OUT: as fixed nanopb structs they blow past nanopb's default 16-bit field
# descriptors (TreeSnapshot x 64 ChildState w/ threads+sockets is >64 kB),
# and PB_FIELD_32BIT can't be flipped per-library — it changes pb_size_t /
# pb_msgdesc_t / PB_BYTES_ARRAY_T ABI, which would mismatch the shared host
# libprotobuf-nanopb.a (16-bit) and corrupt every decode. The firehose moves
# to this transport in the next stage with proper sizing (smaller bounds, or
# callback fields for the unbounded lists).
_SUP_NANOPB_CTRL = [
    "ControlRequest", "ControlReply",
    "StartChildRequest", "DeleteChildRequest", "ChildSelector",
    "GetChildRequest", "GetTreeRequest", "GetSystemInfoRequest",
    "ConfigureTraceRequest", "GetTraceConfigRequest", "TraceConfig",
    "TraceConfigList", "ConfigureLogLevelRequest", "LogLevelConfig",
    "ChildSpec", "HeartbeatReport", "SendTimeoutReport",
    # #429 — the topo-pair firehose stream messages. Small FIXED structs
    # (NodeState's resource fields are scalars; NodeEdge has two 64-char
    # strings), so they fit nanopb's 16-bit field descriptors easily — they
    # CAN compile into the nanopb lib (unlike the monolithic TreeSnapshot).
    # The supervisor casts these to com; ComDaemon register_casts them.
    "NodeEdge", "NodeState", "SnapshotBegin", "SnapshotEnd",
]

cc_library(
    name = "supervisor_nanopb",
    srcs = ["nanopb/{}.pb.c".format(p) for p in _SUP_NANOPB_CTRL],
    hdrs = ["nanopb/{}.pb.h".format(p) for p in _SUP_NANOPB_CTRL],
    # `nanopb/` is the include root: callers write `#include "ControlRequest.pb.h"`.
    includes = ["nanopb"],
    copts = ["-fPIC"],
    # No @nanopb dep: nanopb's pb.h is host-installed (#include <pb.h> resolves
    # against /usr) and the system nanopb runtime is linked by the final binary
    # via `-l:libprotobuf-nanopb.a` in its linkopts — the same convention as
    # //platform/proto:platform_protos and //platform/runtime.
)

# ---------------------------------------------------------------------------
# Header-only RemoteCodec specializations for the supervisor control messages
# (#416). BOTH ends of the standard-transport control link include this so
# the supervisor's register_call and com's RemoteRef hash the SAME C type
# name → SAME service_id. include/ is the root: callers write
# `#include "supervisor/supervisor_codecs.hh"`. Depends on the nanopb structs
# (ControlRequest.pb.h etc.) and //platform/runtime for RemoteCodec.hh.
cc_library(
    name = "supervisor_codecs_hdr",
    hdrs = ["include/supervisor/supervisor_codecs.hh"],
    includes = ["include"],
    deps = [
        ":supervisor_nanopb",
        "//platform/runtime:runtime",
    ],
)
