# config/BUILD.bazel — Bazel platform constraints + selectable configs.
#
# Each `platform()` here corresponds to one target environment Theia
# builds for. Today only two:
#
#   //rules/config:host   — workspace host (linux x86_64, whatever you run
#                     bazel on; matches the docker-compose stack)
#   //rules/config:rpi4   — Raspberry Pi 4 (linux aarch64, Debian bookworm)
#
# Usage from the command line:
#
#   bazel build @rig_apps//compute_host:image \
#       --platforms=//rules/config:rpi4
#
# Adding a new target (Pi Zero, Pi 5, NVIDIA Jetson…): copy the rpi4
# block, change cpu/os, point at a corresponding sysroot in
# third_party/sysroot/, add a toolchain-<name>.cmake.
#
# Why no toolchain() registration here:
# - The C++ binaries (supervisor, services-com) build via CMake, not
#   Bazel — see cmake/toolchain-rpi4.cmake. Bazel's role for those
#   is to package the *already-built* binaries into per-machine .ipk
#   bundles via rules/rig.bzl + rules/opkg.bzl.
# - For pure-Bazel Linux targets, register toolchains via MODULE.bazel
#   bazel_dep(...) instead.

package(default_visibility = ["//visibility:public"])

# -----------------------------------------------------------------------------
# Platforms — keys consumed by select() in rules/rig.bzl and elsewhere.
# -----------------------------------------------------------------------------

platform(
    name = "host",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "rpi4",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

# -----------------------------------------------------------------------------
# config_setting shortcuts — let rules/rig.bzl select() on these names
# instead of writing constraint expressions verbatim. The platform
# constraint approach (`bazel build --platforms=//rules/config:rpi4`) sets
# @platforms//cpu values, which the selects below convert into the
# arch token the .ipk packager wants.
# -----------------------------------------------------------------------------

config_setting(
    name = "is_amd64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "is_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

# Opt-in eBPF backend for services/idsm (the connect() ringbuf, Cat B v2). OFF by
# default — the default build is exec-free + portable (no libbpf / CAP_BPF / BPF
# compile needed). Enable with `bazel build --define theia_ebpf=on ...` on a host
# with libbpf-dev + a BPF-capable clang. See services/idsm/bpf/.
config_setting(
    name = "ebpf_on",
    values = {"define": "theia_ebpf=on"},
)

# Jetson (Orin) build selector for services/shwa: picks the SoC-sysfs +
# nvpmodel backend (shwa_jetson.cc) instead of the default host backend
# (shwa_host.cc — /proc + thermal + nvidia-smi). OFF by default so the central
# x86 build uses the host backend. Enable with `--define jetson=on`.
config_setting(
    name = "jetson_on",
    values = {"define": "jetson=on"},
)

# GNSS time-source driver variant for services/tsync. The default (no --define)
# compiles the synthetic FakeGPS driver (gps_fake.cc) so the dev/CI box builds +
# runs clean without GPS hardware. The real receivers are opt-in:
#   --define gps=rtk   → gps_rtk.cc   (u-blox UBX-NAV-PVT off /dev/serial0, ZED-F9R)
#   --define gps=nmea  → gps_nmea.cc  ($GxRMC/$GxGGA UTC off a serial tty)
config_setting(
    name = "gps_rtk",
    values = {"define": "gps=rtk"},
)

config_setting(
    name = "gps_nmea",
    values = {"define": "gps=nmea"},
)
