# config/BUILD.bazel — Bazel platform constraints + selectable configs.
#
# Each `platform()` here corresponds to one target environment Theia
# builds for. Today only two:
#
#   //rules/config:host   — workspace host (linux x86_64, whatever you run
#                     bazel on; matches the docker-compose stack)
#   //rules/config:rpi4   — Raspberry Pi 4 (linux aarch64, Debian bookworm)
#
# Usage from the command line:
#
#   bazel build @rig_apps//compute_host:image \
#       --platforms=//rules/config:rpi4
#
# Adding a new target (Pi Zero, Pi 5, NVIDIA Jetson…): copy the rpi4
# block, change cpu/os, point at a corresponding sysroot in
# third_party/sysroot/, add a toolchain-<name>.cmake.
#
# Why no toolchain() registration here:
# - The C++ binaries (supervisor, services-com) build via CMake, not
#   Bazel — see cmake/toolchain-rpi4.cmake. Bazel's role for those
#   is to package the *already-built* binaries into per-machine .ipk
#   bundles via rules/rig.bzl + rules/opkg.bzl.
# - For pure-Bazel Linux targets, register toolchains via MODULE.bazel
#   bazel_dep(...) instead.

package(default_visibility = ["//visibility:public"])

# -----------------------------------------------------------------------------
# Platforms — keys consumed by select() in rules/rig.bzl and elsewhere.
# -----------------------------------------------------------------------------

platform(
    name = "host",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "rpi4",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

# NVIDIA Jetson AGX — aarch64 like rpi4, but a DIFFERENT ABI: L4T R35.2.1 / Ubuntu
# 20.04 focal (glibc 2.31), vs rpi4's bookworm (glibc 2.36). The cpu constraint is
# identical, so the platform alone can't pick the sysroot — the build also passes
# `--define theia_target=jetson` (see target_jetson below) to select the focal
# sysroot + the from-source grpc closure. See rules/config/targets.bzl.
platform(
    name = "jetson",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

# -----------------------------------------------------------------------------
# config_setting shortcuts — let rules/rig.bzl select() on these names
# instead of writing constraint expressions verbatim. The platform
# constraint approach (`bazel build --platforms=//rules/config:rpi4`) sets
# @platforms//cpu values, which the selects below convert into the
# arch token the .ipk packager wants.
# -----------------------------------------------------------------------------

config_setting(
    name = "is_amd64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "is_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

# Which aarch64 ABI/sysroot to target — both rpi4 + jetson are cpu:aarch64, so a
# `--define theia_target=<name>` disambiguates the sysroot + the distro-specific
# deb Depends. Default (no define) = rpi4 (the original aarch64 target). Mirrors
# the distro_ubuntu24 pattern. Keep in lockstep with rules/config/targets.bzl.
config_setting(
    name = "target_jetson",
    constraint_values = ["@platforms//cpu:aarch64"],
    values = {"define": "theia_target=jetson"},
)
config_setting(
    name = "target_rpi4",
    constraint_values = ["@platforms//cpu:aarch64"],
    values = {"define": "theia_target=rpi4"},
)

# The aarch64 CROSS-build (rpi4 sysroot) — every aarch64 build that is NOT the
# Jetson native build. Used by the etcd_cpp foreign_cc select so the sysroot
# redirect is unambiguously distinct from target_jetson (both are cpu:aarch64,
# so plain is_arm64 + target_jetson is an ILLEGAL ambiguous match). "no define"
# falls here via the .bazelrc default `--define theia_target=rpi4`.
config_setting(
    name = "arm64_cross",
    constraint_values = ["@platforms//cpu:aarch64"],
    values = {"define": "theia_target=rpi4"},
)

# Opt-in eBPF backend for services/idsm (the connect() ringbuf, Cat B v2). OFF by
# default — the default build is exec-free + portable (no libbpf / CAP_BPF / BPF
# compile needed). Enable with `bazel build --define theia_ebpf=on ...` on a host
# with libbpf-dev + a BPF-capable clang. See services/idsm/bpf/.
config_setting(
    name = "ebpf_on",
    values = {"define": "theia_ebpf=on"},
)

# Jetson (Orin) build selector for services/shwa: picks the SoC-sysfs +
# nvpmodel backend (shwa_jetson.cc) instead of the default host backend
# (shwa_host.cc — /proc + thermal + nvidia-smi). OFF by default so the central
# x86 build uses the host backend. Enable with `--define jetson=on`.
config_setting(
    name = "jetson_on",
    values = {"define": "jetson=on"},
)

# Mesh-transport backend selector, referenced by EXTERNAL package repos (the
# meshtastic package's impl BUILD selects on
# @pero_theia//rules/config:mesh_meshtastic — keep this target stable). The
# default (no --define) compiles the NULL backend (no-op, radio compiled OUT) so
# a dev/CI box builds + runs clean with NO serial/radio dependency. The real
# radio is opt-in:
#   --define mesh=meshtastic → the serial-protobuf backend
config_setting(
    name = "mesh_meshtastic",
    values = {"define": "mesh=meshtastic"},
)

# Build-distro ABI selector for the theia-services .deb Depends. com + per link
# grpc++/libprotobuf SHARED on x86 (the rig's own apt provides them — the host is
# a real distro, not a cross sysroot with .a's), so the package's library
# dependencies are tied to the soname generation of the distro it was BUILT on:
#   Ubuntu 22.04 → libgrpc++1, libprotobuf23   (the default; matches the 0.1/0.2
#                                                releases cut on the 22.04 box)
#   Ubuntu 24.04 → libgrpc++1.51t64, libprotobuf32t64   (--define distro=ubuntu24)
# The arm64 distro static-links the whole grpc/protobuf closure (sysroot .a's) so
# it carries NO such dep — it ignores this selector. Pick the one matching the
# build box; the runtime-plane key is qualified the same way (see seed-official.sh).
config_setting(
    name = "distro_ubuntu24",
    values = {"define": "distro=ubuntu24"},
)
